GET /orders/{orderNumber} - gets user's order by its number